Corrected header spacing error

--- a/app/static/css/general.css
+++ b/app/static/css/general.css
@@ -36,7 +36,7 @@ a:visited {
     color: #8e8e8e;
     fill: #8e8e8e;
     text-decoration: none;
-    line-height: calc(1em - 2px);
+    line-height: 1em;
     height: 1em;
     padding: 0.8em;
     border-bottom: solid 2px #9d2c4b;
@@ -64,8 +64,8 @@ a:visited {
     height: auto;
 }
 
-#header-spacer {
-    height: 2.6em;
+#header-spacer-div {
+    height: calc(2.6em + 2px);
 }
 
 #footer {
